--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,16 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set('springCloudVersion', "2023.0.1")
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
 dependencies {
     // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -27,6 +37,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
     // MySQL
     runtimeOnly 'com.mysql:mysql-connector-j'
@@ -49,6 +60,35 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-test {
-    finalizedBy jacocoTestReport
+jacocoTestReport {
+    // Asegura que los tests se ejecuten antes de generar el reporte
+    dependsOn test
+
+    // Define qué reportes quieres generar (html es el más común)
+    reports {
+        xml.required = true
+        html.required = true
+    }
+
+    // Excluir clases que no aportan valor a la cobertura de código
+    // Esto es una MEJORA DE CALIDAD muy importante para tus reportes
+    classDirectories.setFrom(files(classDirectories.files.collect {
+        fileTree(dir: it, exclude: [
+                // Excluir la clase principal de la aplicación
+                '**/MsSmallSquareApplication.class',
+                // Excluir todas las clases de configuración
+                '**/configuration/**',
+                // Excluir DTOs, Entidades y Mappers que son principalmente datos y boilerplate
+                '**/dto/**',
+                '**/entity/**',
+                '**/mapper/**',
+                // Excluir excepciones personalizadas
+                '**/exception/**'
+        ])
+    }))
+}
+
+// Opcional pero recomendado: Haz que la tarea 'build' dependa del reporte de Jacoco
+tasks.named('build') {
+    dependsOn jacocoTestReport
 }
