--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,7 @@ appVersion: "1.0.0"
 
 url-base:
   ms-users: http://localhost:8090/v1/users
+  ms-messaging: http://localhost:8092/api/v1/messaging
 
 application:
   security:
